feat: Kit Update functionality on KitsCreateUpdateModal

--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/KitTypeCreateUpdate.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/KitTypeCreateUpdate.razor
@@ -67,22 +67,9 @@
 				</Columns>
 				</RadzenDataGrid> *@
 
-				<RadzenStack class="w-100">
-					@foreach (var item in KitsComponentList)
-					{
-						<RadzenStack class="w-100" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center">
-							<RadzenFormField Text="Item name">
-								<RadzenTextBox Value="@item.ItemName" ReadOnly />
-							</RadzenFormField>
-							<RadzenFormField Text="Quantity">
-								<RadzenTextBox Value="@item.Quantity.ToString()" ReadOnly />
-							</RadzenFormField>
-							<RadzenButton Icon="close" ButtonStyle="ButtonStyle.Danger" Click="@(() => RemoveComponent(KitsComponentList.IndexOf(item)))" />
-						</RadzenStack>
-					}
-				</RadzenStack>
-				<RadzenTemplateForm Context="ComponentForm"  Submit="AddComponent" TItem="KitComponentViewModel" Data="ToAdd" class="w-100">
-					<RadzenStack AlignItems="AlignItems.End" class="w-100">
+
+				<RadzenTemplateForm Context="ComponentForm" Submit="AddComponent" TItem="KitComponentViewModel" Data="ToAdd" class="w-100">
+					<RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.End" class="w-100">
 						<RadzenRow class="w-100" Style="flex-grow:1">
 							<RadzenColumn Size="6">
 								<RadzenStack>
@@ -100,10 +87,22 @@
 								</RadzenStack>
 							</RadzenColumn>
 						</RadzenRow>
-						<RadzenStack Orientation="Orientation.Horizontal">
-							<RadzenButton Text="Add" ButtonType="ButtonType.Submit" ButtonStyle="ButtonStyle.Success" />
-							<RadzenButton Text="Reset" Click="ResetComponentForm" ButtonType="ButtonType.Button" ButtonStyle="ButtonStyle.Light" />
-						</RadzenStack>
+						<RadzenButton Text="Add" ButtonType="ButtonType.Submit" ButtonStyle="ButtonStyle.Success" />
+						<RadzenButton Text="Reset" Click="ResetComponentForm" ButtonType="ButtonType.Button" ButtonStyle="ButtonStyle.Light" />
+					</RadzenStack>
+					<RadzenStack class="w-100">
+						@foreach (var item in KitsComponentList)
+						{
+							<RadzenStack class="w-100" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center">
+								<RadzenFormField Text="Item name">
+									<RadzenTextBox Value="@item.ItemName" ReadOnly />
+								</RadzenFormField>
+								<RadzenFormField Text="Quantity">
+									<RadzenTextBox Value="@item.Quantity.ToString()" ReadOnly />
+								</RadzenFormField>
+								<RadzenButton Icon="close" ButtonStyle="ButtonStyle.Danger" Click="@(() => RemoveComponent(KitsComponentList.IndexOf(item)))" />
+							</RadzenStack>
+						}
 					</RadzenStack>
 				</RadzenTemplateForm>
 			</RadzenStack>
@@ -113,5 +112,5 @@
 			</RadzenStack>
 		</RadzenStack>
 
-</RadzenTemplateForm>
+	</RadzenTemplateForm>
 </RadzenStack>
