--- a/LAKAPSAGAP.BlazorServer/Pages/Requesting/RequestingForm.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Requesting/RequestingForm.razor
@@ -1,4 +1,4 @@
-﻿@page "/ReliefRequestForm"
+﻿@page "/requests/requestform"
 @layout MainLayout
 <RadzenCard class="m-5 form-card">
 	<RadzenText TextStyle="TextStyle.DisplayH5" Text="Request Relief Form"></RadzenText>
