--- a/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
 
         @* Request *@
         <div class="@($"d-flex flex-row gap-2 px-4 py-2 justify-content-center align-items-center rz-border-radius-6 {(UriHas("Request") ? "link-active" : "link")}")"
-             @onclick="@(() =>_navManager.NavigateTo("Request", true))">
+             @onclick="@(() =>_navManager.NavigateTo("Requests", true))">
             <i class='bx bx-transfer-alt' style="font-size: 0.8rem"></i>
             <span class="fw-bold text-center" style="font-size: 0.75rem">Request</span>
         </div>
