--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
@@ -5,13 +5,13 @@
 	<MacroSearch Placeholder="Search Received Stocks ... " />
 	<div class="d-flex justify-items-start align-items-center gap-2 mt-2">
 		<RadzenDataGrid AllowColumnResize="false" AllowPaging="true" AllowSorting="true" AllowFiltering="false" ShowPagingSummary="true"
-						Data="@_tableData" PageSize="10"
+						Data="@TableData" PageSize="10"
 						Style="border-radius: var(--rz-border-radius-2);">
 			<Columns>
 				<RadzenDataGridColumn Property="@nameof(ReliefReceivedViewModel.Id)" Title="Batch ID"
 									  TextAlign="TextAlign.Left" Width="60px" />
 				@* <RadzenDataGridColumn Property="@nameof(ReliefReceivedViewModel.ReliefType)" Title="Receive Type"
-									  TextAlign="TextAlign.Left" Width="80px" /> *@
+				TextAlign="TextAlign.Left" Width="80px" /> *@
 				<RadzenDataGridColumn Property="@nameof(ReliefReceivedViewModel.ReceivedFrom)" Title="Supplier"
 									  TextAlign="TextAlign.Left" Width="90px" />
 				<RadzenDataGridColumn Property="@nameof(ReliefReceivedViewModel.ReceivedDate)" Title="Date Received"
@@ -31,14 +31,26 @@
 								Data="@data.StockDetailViewList" PageSize="10"
 								Style="border-radius: var(--rz-border-radius-2);">
 					<Columns>
-						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Id)" Title="Batch ID"
+						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.BatchNumber)" Title="Batch ID"
 											  TextAlign="TextAlign.Left" Width="60px" />
-						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ItemId)" Title="Receive Type"
-											  TextAlign="TextAlign.Left" Width="80px" />
-						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.CategoryId)" Title="Date Received"
-											  TextAlign="TextAlign.Left" Width="90px" />
+						<RadzenDataGridColumn Title="Item Name"
+											  TextAlign="TextAlign.Left" Width="80px">
+							<Template Context="stockdetail">
+								@stockdetail.Item.Name
+							</Template>
+
+						</RadzenDataGridColumn>
 						<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Quantity)" Title="Supplier"
 											  TextAlign="TextAlign.Left" Width="90px" />
+						<RadzenDataGridColumn Title="UoM"
+											  TextAlign="TextAlign.Left" Width="80px">
+							<Template Context="stockdetail">
+								@stockdetail.Item.UoMName
+							</Template>
+
+						</RadzenDataGridColumn>
+
+						
 					</Columns>
 					<EmptyTemplate>
 						<p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">No records to display.</p>
