--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/KitTypeCreateUpdate.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/KitTypeCreateUpdate.razor
@@ -107,7 +107,7 @@
 				</RadzenTemplateForm>
 			</RadzenStack>
 			<RadzenStack class="mt-3" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.End" Gap="10px">
-				<RadzenButton Text="Cancel" Icon="close" ButtonStyle="ButtonStyle.Base" Size="ButtonSize.Small" Click="@(() => _dialogService.Close())" />
+				<RadzenButton Text="Cancel" Icon="close" ButtonStyle="ButtonStyle.Base" Size="ButtonSize.Small" Click="@(() => _dialogService.Close(""))" />
 				<RadzenButton ButtonType="ButtonType.Submit" Text="Save" Icon="done_outline" ButtonStyle="ButtonStyle.Success" Shade="Shade.Light" Size="ButtonSize.Small" />
 			</RadzenStack>
 		</RadzenStack>
